--- a/src/components/NewProject/NewProject.css
+++ b/src/components/NewProject/NewProject.css
@@ -85,7 +85,6 @@
     background-color: #10b981;
     color: #fff;
     padding: 5px;
-    /* margin-left: 10px; */
     border-radius: 5px;
     border: none;
     padding: 5px 10px;
@@ -93,14 +92,14 @@
     font-weight: 600;
     cursor: pointer;
     width: 90px;
-    margin: 15px 0px;
+    margin: 0px 0px;
+    height: 43px;
 }
 
 .btn1{
     background-color: #10b981;
     color: #fff;
     padding: 5px;
-    /* margin-left: 10px; */
     border-radius: 5px;
     border: none;
     padding: 5px 10px;
@@ -108,7 +107,7 @@
     font-weight: 600;
     cursor: no-drop;
     width: 90px;
-    margin: 15px 0px;
+    height: 43px;
 }
 
 .follow-btn {
