--- a/src/components/NewProject/NewProject.css
+++ b/src/components/NewProject/NewProject.css
@@ -33,7 +33,7 @@
 
 .left-side img {
     height: 10px;
-    margin-right: 10px;
+    margin-right: 5px;
 }
 
 .left-side span {
@@ -60,6 +60,7 @@
     width: 100%;
     height: 100%;
     background-color: #fff;
+    border-top: 1px solid black;
 }
 
 
